delete extra diagrams

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -142,21 +142,12 @@ You have created an account with name of 'Japan trip'.
 * `account add n/Japan trip d/expense spent in Japan`
 You have created an account with name of 'Japan trip' and description of 'expense spent in Japan'.
 
-image::accountadd_1.png[]
-
-1a. Enter the command "account add n/exchange d/expenses spent during SEP".
-
-image::accountadd_2.png[]
-
-1b. You have created an account to record an account named "exchange" with the successful message displayed.
 
 ==== List accounts: `account list`
 
 If you want to see the full list of accounts you currently own, you can enter command and a list of all accounts will be displayed.
 
 Format: `account list`
-
-image::accountlist.png[]
 
 ==== Edit an account: `account edit`
 
@@ -220,16 +211,12 @@ Format: `account find <keyword>`
 
 Examples:
 
-*`account find trip`
+* `account find trip`
 You can see a list of accounts with the word 'trip' contained in their names.
-
-image::accountfind_1.png[]
-
-1a. Enter the command "account find trip".
 
 image::accountfind_2.png[]
 
-1b. You have found 2 accounts with their names containing the keyword "trip".
+You have found 2 accounts with their names containing the keyword "trip".
 
 ==== View report of an account: `account report`
 
@@ -244,15 +231,11 @@ Format: `account report <id>`
 
 Example:
 
-*`account report 1` You can view the report of the first account.
-
-image::accountreport_1.png[]
-
-1a. Enter the command "account report 2".
+* `account report 2` You can view the report of the first account.
 
 image::accountreport2.png[]
 
-1b. You can view the details of the second account.
+You can view the details of the second account.
 
 ==== Export the overview of all accounts: `account overview`
 
