--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -127,11 +127,7 @@ Examples: +
 .Delete Event Command
 image::DeleteEventCommandScreenShot.png[]
 
-.Index found on the top right of the event.
-image::EventCardScreenShot.png[]
-
 You may use the `delete_event` command to delete one or more events from the calendar. +
-Note that deletion is based of a zero-indexing that is found on the event's top right corner. +
 
 Command Format: +
 `*delete_event* INDEX...`
@@ -141,6 +137,7 @@ Command Parameters: +
 
 Remarks: +
 Events which match both `INDEX` and `TAG` will be deleted.
+`INDEX` can be found on the event's top right corner.
 
 Examples: +
 `*delete_event* 1` +
